--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="prev">
@@ -105,6 +102,35 @@
         </section>
         <!-- image slide section end  -->
     </header>
+    <main>
+        <!-- category Section start  -->
+        <section class="my-5">
+            <div class="container overflow-hidden text-center">
+                <div class="row gy-5">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-3 bg-warning d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-3 bg-danger d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-3 bg-primary d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- category Section end  -->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
