--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>web ecommerce</title>
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/05bf847d24.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -132,7 +134,7 @@
         <!-- category Section end  -->
         <!-- shoes section start  -->
         <section class="container my-5">
-            <h1>Shoes</h1>
+            <h1 class="my-3">Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="border border-0 shadow-lg card h-100">
@@ -144,37 +146,42 @@
                             <h3>$120</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now</button>
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Nike 360</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
+                            <h3>$320</h3>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Red Airmax</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
+                                additional.</p>
+                            <h3>$350</h3>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
         <!-- shoes section end  -->
