--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!-- shoes section start  -->
         <section class="container my-5">
             <h1 class="my-3">Shoes</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="border border-0 shadow-lg card h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -181,10 +181,62 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
         <!-- shoes section end  -->
+        <!-- bag section start  -->
+        <section class="container my-5">
+            <h1 class="my-3">Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h3>$120</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h3>$320</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- bag section end  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
