--- a/index.html
+++ b/index.html
@@ -237,6 +237,107 @@
             </div>
         </section>
         <!-- bag section end  -->
+        <!-- watch section start  -->
+        <section class="container my-5">
+            <h1 class="my-3">Watch</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/watch/watch-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h3>$120</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/watch/watch-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h3>$320</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/watch/watch-6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/watch/watch-9.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/watch/watch-7.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/watch/watch-12.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- watch section end  -->
         <!-- subscribe section start  -->
         <section style="height: 300px;"
             class="container rounded-3 bg-info d-flex justify-content-center align-items-center">
@@ -253,6 +354,9 @@
         </section>
         <!-- subscribe section end  -->
     </main>
+    <footer class="container mt-5 d-flex justify-content-center align-items-end">
+        <p>©2020. Web Commerce. All rights reserved. Md Shamim Hossain</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
