--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <script src="https://kit.fontawesome.com/05bf847d24.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Custom css style  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <img src="images/logo.png" alt="">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -22,10 +24,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Product</a>
+                            <a class="nav-link" href="#product">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#backpack">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#watch">Watch</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
@@ -106,7 +114,7 @@
     </header>
     <main>
         <!-- category Section start  -->
-        <section class="my-5">
+        <section class="my-5" id="product">
             <div class="container overflow-hidden text-center">
                 <div class="row gy-5">
                     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -133,7 +141,7 @@
         </section>
         <!-- category Section end  -->
         <!-- shoes section start  -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h1 class="my-3">Shoes</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -181,11 +189,56 @@
                         </div>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- shoes section end  -->
         <!-- bag section start  -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h1 class="my-3">Backpack</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -234,11 +287,59 @@
                         </div>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$350</h3>
+                        </div>
+                        <div class="">
+                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                                    class="fa-solid fa-angles-right"></i></button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- bag section end  -->
         <!-- watch section start  -->
-        <section class="container my-5">
+        <section class="container my-5" id="watch">
             <h1 class="my-3">Watch</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -354,8 +455,8 @@
         </section>
         <!-- subscribe section end  -->
     </main>
-    <footer class="container mt-5 d-flex justify-content-center align-items-end">
-        <p>©2020. Web Commerce. All rights reserved. Md Shamim Hossain</p>
+    <footer class="container mt-5 text-center">
+        <p><small>©2020. Web Commerce. All rights reserved. Md Shamim Hossain</small></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
