added custom css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -56,7 +56,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$450</h1>
-                                    <button class="btn btn-danger">Buy Now</button>
+                                    <button class="btn btn-now-btn-danger">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info border rounded p-5">
+                    <div class="carousel-item panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -73,7 +73,7 @@
                                         do amet sint. Velit officia consequat duis enim velit mollit.
                                         Exercitation veniam consequat sunt nostrud amet.</p>
                                     <h1>$1450</h1>
-                                    <button class="btn btn-danger">Buy Now</button>
+                                    <button class="btn btn-now-btn-danger">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info border rounded p-5">
+                    <div class="carousel-item panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -89,7 +89,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$450</h1>
-                                    <button class="btn btn-danger">Buy Now</button>
+                                    <button class="btn btn-now-btn-danger">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -116,7 +116,7 @@
         <!-- category Section start  -->
         <section class="my-5" id="product">
             <div class="container overflow-hidden text-center">
-                <div class="row gy-5">
+                <div class="row gy-2 categorys">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="p-3 border rounded-3 bg-warning d-flex align-items-center justify-content-around">
                             <h1 class="text-white">Watch</h1>
@@ -124,7 +124,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-3 bg-danger d-flex align-items-center justify-content-around">
+                        <div
+                            class="p-3 border rounded-3 bag-bg-danger d-flex align-items-center justify-content-around">
                             <h1 class="text-white">Bag</h1>
                             <img src="images/categories/bag.png" alt="">
                         </div>
@@ -154,7 +155,7 @@
                             <h3>$120</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -169,7 +170,7 @@
                             <h3>$320</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -184,7 +185,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -199,7 +200,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -214,7 +215,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -229,7 +230,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -251,7 +252,7 @@
                             <h3>$120</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -266,7 +267,7 @@
                             <h3>$320</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -282,7 +283,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -298,7 +299,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -314,7 +315,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -330,7 +331,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -352,7 +353,7 @@
                             <h3>$120</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -367,7 +368,7 @@
                             <h3>$320</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -383,7 +384,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -399,7 +400,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -415,7 +416,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -431,7 +432,7 @@
                             <h3>$350</h3>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger m-3 px-4 py-2">Buy Now <i
+                            <button class="btn btn-now-btn-danger m-3 px-4 py-2">Buy Now <i
                                     class="fa-solid fa-angles-right"></i></button>
                         </div>
                     </div>
@@ -441,7 +442,7 @@
         <!-- watch section end  -->
         <!-- subscribe section start  -->
         <section style="height: 300px;"
-            class="container rounded-3 bg-info d-flex justify-content-center align-items-center">
+            class="container rounded-3 panda-bg-info d-flex justify-content-center align-items-center">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -449,7 +450,7 @@
                     <div class="mb-3">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-now-btn-danger">Submit</button>
                 </form>
             </div>
         </section>
